# Medit

./: .gitignore  PRIVACY.md  README.md  README.zh.md  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml  tsconfig.json
.ralph-tui/: session-meta.json  session.json
chrome/: build-config.js  build.js  manifest.json
demo/: canvas-demo.md  demo.vl  test.md
docs/: README.md  SUMMARY.md  faq.md  privacy.md  promo.sketch
firefox/: README.md  build-config.js  build.js  manifest.json
lib/: main.dart
mobile/: README.md  build-app.js  build.js  pubspec.yaml
patches/: @antv+infographic+0.2.1.patch
scripts/: analyze-dependencies.js  build-config.js  build-mobile.js  build-vscode.js  build.js  check-missing-keys.js  cleanup-unused-keys.js  download-fonts.js  generate-icons.sh  generate-stencil-docs.cjs  sort-locale-keys.js
src/: background.js  cache-manager.js  content.js  docx-exporter.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  renderer.js  styles.css  theme-manager.js  theme-to-css.js  theme-to-docx.js
tasks/: prd-menubar-preferences.json  prd.json
tauri/: CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: CLAUDE.md  commands.rs  lib.rs  main.rs  menu.rs
temp/: test-infographic.html
test/: all.test.js  canvas-renderer.test.ts  demo.gv  demo.vega  docx-math-converter.test.mjs  heading-numbering.test.ts  infographic-demo.md  (+9 more)
(+383 files in other folders)
