[package]
name = "medit"
version = "1.0.0"
description = "Medit - Markdown Editor Desktop Application"
authors = ["Medit Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "medit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "medit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
